[package]
name = "etrid-aecomms"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
