[package]
name = "detrp2p"
version = "0.1.0"
edition = "2021"
authors = ["Etrid Team"]
description = "DETR P2P - Distributed Encrypted Transport for Etrid Network"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }

# Cryptography
ecies = { workspace = true }

# Utilities
log = { workspace = true }
hex = { workspace = true }

# For checkpoint finality message types
scale-info = { version = "2.11", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["std"]
std = []
