[package]
name = "director-node"
version = "0.1.0"
edition = "2021"
authors = ["Etrid Team"]

[dependencies]
detrp2p = { path = "../detrp2p" }
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
blake2 = "0.10"
futures = "0.3"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "director-node"
path = "src/main.rs"

[lib]
name = "director_node"
path = "src/lib.rs"
