[package]
name = "etrid-protocol"
version = "0.1.0"
edition = "2021"
authors = ["ÉTRID Contributors"]
description = "ÉTRID network protocol message definitions and serialization"
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { workspace = true }
bincode = "1.3"

# Cryptography
sha2 = "0.10"

# Utilities
rand = "0.8"

# Async runtime (for gadget-network-bridge)
tokio = { version = "1.40", features = ["sync", "time", "macros"] }

[dev-dependencies]
# No additional dev dependencies needed - tests use standard dependencies

[features]
default = ["std"]
std = []
