[package]
name = "aidid"
version = "1.0.0"
authors = ["Ëtrid Foundation"]
edition = "2021"
license = "Apache-2.0"
description = "AI Decentralized Identity (AIDID) implementation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json/std",
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
]
