[package]
name = "etrid-cryptography"
version = "0.1.0"
edition = "2021"
authors = ["Etrid Team"]
description = "Core cryptographic primitives for Etrid: signing, encryption, hashing, KDF"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hex = { workspace = true }

# Cryptography dependencies
sha2 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
hkdf = { version = "0.12", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

[features]
default = ["std"]
std = [
    "ed25519-dalek/std",
    "sha2/std",
    "hkdf/std",
    "rand/std",
    "hex/std",
]

[dev-dependencies]
rand = "0.8"
